--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <h1>Durgaprasad portfolio</h1>
     <h2>I'm a web developer</h2>
     <hr>
-    <h3><a href="../4.3 HTML Porfolio Project/MOVIES.HTML.html">webseries ranking project</a></h3>
-    <img src="../4.3 HTML Porfolio Project/webseries durga.png" height="200">
-    <h3><a href="../4.3 HTML Porfolio Project/BIRTHDAY.HTML.html">birthday invite project</a></h3>
-    <img src="../4.3 HTML Porfolio Project/birthday durga.png" height="200">
+    <h3><a href="./MOVIES.HTML.html">webseries ranking project</a></h3>
+    <img src="./webseries durga.png" height="200">
+    <h3><a href="./BIRTHDAY.HTML.html">birthday invite project</a></h3>
+    <img src="./birthday durga.png" height="200">
 <hr>
-<h4><a href="../4.1 Webpages/public/about.html">about me</a>
-<a href="../4.1 Webpages/public/contact.html">contact me</a></h4>
+<h4><a href="./template/about.html">about me</a>
+<a href="./template/contact.html">contact me</a></h4>
 </body>
 </html>
